2009-04-13  Matevz Tadel  <matevz.tadel@ijs.si>

	Formatting changes.

	* Rnr/GL/ZGlass_GL_Rnr.h:
	* Rnr/GL/ZNode_GL_Rnr.h:
	* RnrBase/A_Rnr.cxx:
	* RnrBase/A_Rnr.h:
	* RnrBase/RnrDriver.cxx:
	Formatting changes while trying to understand how render-bits
	really work for links to lists. Exactly as they should, it turns
	out.

2009-04-12  Matevz Tadel  <matevz.tadel@ijs.si>

	Change render-class determination and handling of L{aA} pragma.

	* Gled/GledNS.cxx:
	Change logic for determination of rendering class: find it at
	run-time, so that catalog generators don't need information about
	other libsets.

	Before empty render specification meant use 'ZGlass' renderer.
	Now it means take the first existing renderer in the glass
	hierarchy.
	
	* glass.list:
	Fix for new render-class specification

	* RnrBase/A_Rnr.cxx:
	* RnrBase/A_Rnr.h:
	Gray-space changes.

2009-04-07  Matevz Tadel  <matevz.tadel@ijs.si>

	Add support for enum info in Gled class catalogs.

	* Gled/GledNS.cxx:
	* Gled/GledNS.h:
	Add structures EnumEntry and EnumInfo.
	Add a list of EnumInfos to Class info and provide query methods.

	* perllib/GLED_GledCore_Widgets.pm:
	Rewrite GLED::Widgets::PhonyEnum to use new GledNS structures.

	* Glasses/ZQueen.cxx:
	* Glasses/ZQueen.h:
	Move LensState_e from nested class LensDetails up into ZQueen.

	* FL/Fl_PhonyEnum.cxx:
	* FL/Fl_PhonyEnum.h:
	Rename method Bruh() to AddEntry().

2009-04-05  Matevz Tadel  <matevz.tadel@ijs.si>

	Minor fixes.

	* Gled/Gled.cxx:
	Fix dump of 'auth-dir not found' warning.

	* Rnr/GL/WGlFrameStyle_GL_Rnr.cxx:
	Modify polgon-offset handling - on some nvidias the frame was
	hidden under the tile.

2009-03-28  Matevz Tadel  <matevz.tadel@ijs.si>

	* Ephra/Saturn.cxx:
	* Gled/Gled.cxx:
	Cannonize GLED_BUILD defines.

2009-03-08  Matevz Tadel  <matevz.tadel@ijs.si>

	Intruduce new config header gled-config-build.h.

	* Ephra/Saturn.cxx:
	Include the new config header.

	* Gled/Gled.cxx:
	Include the new config header.